[project]
name = "lightgluestick"
description = "LightGlueStick: Fast and Robust Joint Point-Line Matching"
version = "0.0"
authors = [
    {name = "Aidyn Ubingazhibov"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/aubingazhib/LightGlueStick/"}
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["black==23.12.1", "flake8", "isort"]

[tool.setuptools]
packages = ["lightgluestick"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"